<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notifications</string>
    <string name="codeversed_logo">Codeversed Logo</string>
    <string name="normal">Normal</string>
    <string name="big_text_style">Big Text Style</string>
    <string name="big_picture_style">Big Picture Style</string>
    <string name="inbox_style">Inbox Style</string>
    <string name="custom_view">Custom View</string>
</resources>
